--- a/nationalize.css
+++ b/nationalize.css
@@ -78,7 +78,8 @@ body {
         padding: 0.75rem 1rem;
         font-size: 1.1rem;
         cursor: pointer;
-        position: fixed;
+        /* position: fixed; */
+        position: absolute;
         /* fixed ensures strict placement */
         top: 2.25rem;
         right: 5%;
